<resources>
    <string name="app_name">CleanArchitectureWithDI</string>
    <string name="sign_in">sign in</string>
    <string name="forget_password"><u>Forget Password?</u></string>
    <string name="powered_by">Powered by</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="verification">Verification</string>
    <string name="please_choose_your_desired_verification_method">Please choose your desired verification method</string>
    <string name="mobile_verification">Mobile Verification</string>
    <string name="face_recognition">Face Recognition</string>
    <string name="submit">Submit</string>
    <string name="please_provide_your_otp">Please provide your OTP</string>
    <string name="did_not_receive_otp_resend">Did not receive OTP? <u><b>RESEND</b></u></string>
    <string name="please_wait">Please wait...</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>